2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* TextEditor.xml:
	* X3DTextEditorInterface.h:
	* MFStringFamilyWidget.h:
	* X3DTextEditorInterface.cpp:
	* X3DFontStyleNodeEditor.h:
	* X3DFontStyleNodeEditor.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* ComposedWidgets.h:
	* X3DTextEditorInterface.h:
	* X3DTextEditorInterface.cpp:
	* X3DFontStyleNodeEditor.h: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* TextEditor.xml:
	* X3DFontStyleNodeEditor.h:
	* X3DFontStyleNodeEditor.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* HistoryView.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* AboutTab.h:
	* AboutTab.cpp:
	* BrowserWindow.h:
	* HistoryView.xml:
	* BrowserWindow.cpp:
	* tab.x3dv:
	* BrowserWindow.xml:
	* History.h:
	* History.cpp:
	* HistoryView.h:
	* HistoryView.cpp:
	* X3DHistoryViewInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DHistoryViewInterface.cpp:
	* X3DBrowserWindowInterface.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* AboutTab.cpp:
	* tab.x3dv:
	* X3DBrowserWidget.cpp:
	* TextureEditor.xml:
	* X3DTextureEditorInterface.h:
	* X3DTextureEditorInterface.cpp:
	* X3DImageTextureEditor.h:
	* X3DImageTextureEditor.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* AboutTab.cpp:
	* tab.x3dv:
	* TextureEditor.xml:
	* X3DTextureEditorInterface.h:
	* X3DTextureEditorInterface.cpp:
	* X3DImageTextureEditor.h:
	* X3DImageTextureEditor.cpp: 

2014-09-12  Holger Seelig  <holger.seelig@yahoo.de>

	* AboutTab.h:
	* AboutTab.cpp:
	* tab.x3dv:
	* X3DBrowserWidget.cpp:
	* dot-clear.png:
	* X3DFieldAdjustment.h:
	* X3DFieldAdjustment2.h:
	* X3DFieldAdjustment3.h:
	* X3DFieldAdjustment4.h:
	* dot-clear.png: 

2014-09-11  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserHistory.cpp:
	* BrowserWindow.xml:
	* X3DBrowserEditor.h:
	* tab.x3dv:
	* X3DBrowserWidget.h:
	* blank.x3dv:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* LODEditor.xml: