@@ -189,14 +189,6 @@ public:
 	style () const
 	{ return *fields .style; }
 
-	virtual
-	SFFloat &
-	size () = 0;
-
-	virtual
-	const SFFloat &
-	size () const = 0;
-
 	SFFloat &
 	spacing ()
 	{ return *fields .spacing; }
